- login now sets logged in cookie that will be read by wordpress

--- a/locales/en.json
+++ b/locales/en.json
@@ -551,5 +551,8 @@
 	"Shards": "Shards",
 	"Links": "Links",
 	"Donate": "Donate",
-	"Login": "Login"
+	"Login": "Login",
+	"Zoom in": "Zoom in",
+	"Zoom out": "Zoom out",
+	"Use wotbase maps": "Use wotbase maps"
 }
