--- a/locales/en.json
+++ b/locales/en.json
@@ -554,5 +554,9 @@
 	"Login": "Login",
 	"Zoom in": "Zoom in",
 	"Zoom out": "Zoom out",
-	"Use wotbase maps": "Use wotbase maps"
+	"Use wotbase maps": "Use wotbase maps",
+	"Use HD minimaps": "Use HD minimaps",
+	"Use Wotbase maps": "Use Wotbase maps",
+	"Use New minimaps": "Use New minimaps",
+	"Cliff": "Cliff"
 }
