--- a/locales/nl.json
+++ b/locales/nl.json
@@ -554,5 +554,9 @@
 	"Login": "Inloggen",
 	"Use wotbase maps": "Mappen van wotbase gebruiken",
 	"Zoom in": "Inzoemen",
-	"Zoom out": "Uitzoemen"
+	"Zoom out": "Uitzoemen",
+	"Use HD minimaps": "Use HD minimaps",
+	"Use Wotbase maps": "Use Wotbase maps",
+	"Use New minimaps": "Use New minimaps",
+	"Cliff": "Cliff"
 }
