--- a/locales/ru.json
+++ b/locales/ru.json
@@ -539,5 +539,7 @@
 	"Shards": "Shards",
 	"Links": "Links",
 	"Donate": "Donate",
-	"Login": "Login"
+	"Login": "Login",
+	"Zoom in": "Zoom in",
+	"Zoom out": "Zoom out"
 }
