--- a/locales/ru.json
+++ b/locales/ru.json
@@ -541,5 +541,9 @@
 	"Donate": "Donate",
 	"Login": "Login",
 	"Zoom in": "Zoom in",
-	"Zoom out": "Zoom out"
+	"Zoom out": "Zoom out",
+	"Cliff": "Cliff",
+	"Use HD minimaps": "Use HD minimaps",
+	"Use Wotbase maps": "Use Wotbase maps",
+	"Use New minimaps": "Use New minimaps"
 }
