--- a/locales/fi.json
+++ b/locales/fi.json
@@ -541,5 +541,13 @@
 	"Warhead Junction": "Warhead Junction",
 	"Links": "Links",
 	"Donate": "Donate",
-	"Login": "Login"
+	"Login": "Login",
+	"Shards": "Shards",
+	"Zoom in": "Zoom in",
+	"Zoom out": "Zoom out",
+	"Use wotbase maps": "Use wotbase maps",
+	"Cliff": "Cliff",
+	"Use HD minimaps": "Use HD minimaps",
+	"Use Wotbase maps": "Use Wotbase maps",
+	"Use New minimaps": "Use New minimaps"
 }
