--- a/locales/nl.json
+++ b/locales/nl.json
@@ -555,8 +555,8 @@
 	"Use wotbase maps": "Mappen van wotbase gebruiken",
 	"Zoom in": "Inzoemen",
 	"Zoom out": "Uitzoemen",
+	"Cliff": "Cliff",
 	"Use HD minimaps": "Use HD minimaps",
 	"Use Wotbase maps": "Use Wotbase maps",
-	"Use New minimaps": "Use New minimaps",
-	"Cliff": "Cliff"
+	"Use New minimaps": "Use New minimaps"
 }
