--- a/locales/ru.json
+++ b/locales/ru.json
@@ -542,6 +542,7 @@
 	"Login": "Login",
 	"Zoom in": "Zoom in",
 	"Zoom out": "Zoom out",
+	"Use wotbase maps": "Use wotbase maps",
 	"Cliff": "Cliff",
 	"Use HD minimaps": "Use HD minimaps",
 	"Use Wotbase maps": "Use Wotbase maps",
