--- a/locales/en.json
+++ b/locales/en.json
@@ -555,8 +555,8 @@
 	"Zoom in": "Zoom in",
 	"Zoom out": "Zoom out",
 	"Use wotbase maps": "Use wotbase maps",
+	"Cliff": "Cliff",
 	"Use HD minimaps": "Use HD minimaps",
 	"Use Wotbase maps": "Use Wotbase maps",
-	"Use New minimaps": "Use New minimaps",
-	"Cliff": "Cliff"
+	"Use New minimaps": "Use New minimaps"
 }
