--- a/locales/sr.json
+++ b/locales/sr.json
@@ -526,5 +526,15 @@
 	"Light blue": "Light blue",
 	"Braxis Holdout": "Braxis Holdout",
 	"Warhead Junction": "Warhead Junction",
-	"Shards": "Shards"
+	"Shards": "Shards",
+	"Links": "Links",
+	"Donate": "Donate",
+	"Login": "Login",
+	"Zoom in": "Zoom in",
+	"Zoom out": "Zoom out",
+	"Use wotbase maps": "Use wotbase maps",
+	"Cliff": "Cliff",
+	"Use HD minimaps": "Use HD minimaps",
+	"Use Wotbase maps": "Use Wotbase maps",
+	"Use New minimaps": "Use New minimaps"
 }
