Updated aw maps

--- a/locales/en.json
+++ b/locales/en.json
@@ -558,5 +558,15 @@
 	"Cliff": "Cliff",
 	"Use HD minimaps": "Use HD minimaps",
 	"Use Wotbase maps": "Use Wotbase maps",
-	"Use New minimaps": "Use New minimaps"
+	"Use New minimaps": "Use New minimaps",
+	"Forum": "Forum",
+	"Forums": "Forums",
+	"Albino polygon": "Albino polygon",
+	"Desert crossing": "Desert crossing",
+	"Frontline": "Frontline",
+	"Operation Basilisk": "Operation Basilisk",
+	"Operation Erebos": "Operation Erebos",
+	"Operation Frostbite": "Operation Frostbite",
+	"Operation Leviathan": "Operation Leviathan",
+	"Operation Zero hour": "Operation Zero hour"
 }
