--- a/locales/pl.json
+++ b/locales/pl.json
@@ -545,5 +545,7 @@
 	"Cliff": "Cliff",
 	"Use HD minimaps": "Use HD minimaps",
 	"Use Wotbase maps": "Use Wotbase maps",
-	"Use New minimaps": "Use New minimaps"
+	"Use New minimaps": "Use New minimaps",
+	"Forums": "Forums",
+	"Use original ui": "Use original ui"
 }
