--- a/locales/ru.json
+++ b/locales/ru.json
@@ -546,5 +546,7 @@
 	"Cliff": "Cliff",
 	"Use HD minimaps": "Use HD minimaps",
 	"Use Wotbase maps": "Use Wotbase maps",
-	"Use New minimaps": "Use New minimaps"
+	"Use New minimaps": "Use New minimaps",
+	"Forum": "Forum",
+	"Forums": "Forums"
 }
