Fixed twitter login on domains other than wottactic.tk. Made battlenet login available on domains other than gametactic.org

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -548,5 +548,6 @@
 	"Use Wotbase maps": "Use Wotbase maps",
 	"Use New minimaps": "Use New minimaps",
 	"Forum": "Forum",
-	"Forums": "Forums"
+	"Forums": "Forums",
+	"Use original ui": "Use original ui"
 }
