--- a/locales/fi.json
+++ b/locales/fi.json
@@ -549,5 +549,23 @@
 	"Cliff": "Cliff",
 	"Use HD minimaps": "Use HD minimaps",
 	"Use Wotbase maps": "Use Wotbase maps",
-	"Use New minimaps": "Use New minimaps"
+	"Use New minimaps": "Use New minimaps",
+	"Forums": "Forums",
+	"Albino polygon": "Albino polygon",
+	"Desert crossing": "Desert crossing",
+	"Frontline": "Frontline",
+	"Operation Basilisk": "Operation Basilisk",
+	"Operation Erebos": "Operation Erebos",
+	"Operation Frostbite": "Operation Frostbite",
+	"Operation Leviathan": "Operation Leviathan",
+	"Operation Zero hour": "Operation Zero hour",
+	"Kohat Toi River Valley View": "Kohat Toi River Valley View",
+	"Kokan": "Kokan",
+	"Daybreak LE": "Daybreak LE",
+	"Echo LE": "Echo LE",
+	"Habitation Station LE": "Habitation Station LE",
+	"Newkirk Precinct TE": "Newkirk Precinct TE",
+	"Overgrowth": "Overgrowth",
+	"Vaani research station": "Vaani research station",
+	"Whirlwind LE": "Whirlwind LE"
 }
