--- a/locales/en.json
+++ b/locales/en.json
@@ -559,7 +559,6 @@
 	"Use HD minimaps": "Use HD minimaps",
 	"Use Wotbase maps": "Use Wotbase maps",
 	"Use New minimaps": "Use New minimaps",
-	"Forum": "Forum",
 	"Forums": "Forums",
 	"Albino polygon": "Albino polygon",
 	"Desert crossing": "Desert crossing",
@@ -568,5 +567,14 @@
 	"Operation Erebos": "Operation Erebos",
 	"Operation Frostbite": "Operation Frostbite",
 	"Operation Leviathan": "Operation Leviathan",
-	"Operation Zero hour": "Operation Zero hour"
+	"Operation Zero hour": "Operation Zero hour",
+	"Kohat Toi River Valley View": "Kohat Toi River Valley View",
+	"Kokan": "Kokan",
+	"Daybreak LE": "Daybreak LE",
+	"Echo LE": "Echo LE",
+	"Habitation Station LE": "Habitation Station LE",
+	"Newkirk Precinct TE": "Newkirk Precinct TE",
+	"Overgrowth": "Overgrowth",
+	"Vaani research station": "Vaani research station",
+	"Whirlwind LE": "Whirlwind LE"
 }
