- Added player stats display.

--- a/locales/es.json
+++ b/locales/es.json
@@ -556,5 +556,150 @@
 	"Newkirk Precinct TE": "Newkirk Precinct TE",
 	"Overgrowth": "Overgrowth",
 	"Vaani research station": "Vaani research station",
-	"Whirlwind LE": "Whirlwind LE"
+	"Whirlwind LE": "Whirlwind LE",
+	"Canyon": "Canyon",
+	"Bank -1": "Bank -1",
+	"Bank 0": "Bank 0",
+	"Bank 1": "Bank 1",
+	"Bank 2": "Bank 2",
+	"Chalet -1": "Chalet -1",
+	"Chalet 0": "Chalet 0",
+	"Chalet 1": "Chalet 1",
+	"Chalet 2": "Chalet 2",
+	"Club House -1": "Club House -1",
+	"Club House 0": "Club House 0",
+	"Club House 1": "Club House 1",
+	"Club House 2": "Club House 2",
+	"Consulate -1": "Consulate -1",
+	"Consulate 0": "Consulate 0",
+	"Consulate 1": "Consulate 1",
+	"Consulate 2": "Consulate 2",
+	"Kafe Dostoyevsky - 0": "Kafe Dostoyevsky - 0",
+	"Kafe Dostoyevsky - 1": "Kafe Dostoyevsky - 1",
+	"Kafe Dostoyevsky - 2": "Kafe Dostoyevsky - 2",
+	"Kafe Dostoyevsky - 3": "Kafe Dostoyevsky - 3",
+	"Hereford Base -1": "Hereford Base -1",
+	"Hereford Base 0": "Hereford Base 0",
+	"Hereford Base 1": "Hereford Base 1",
+	"Hereford Base 2": "Hereford Base 2",
+	"Hereford Base 3": "Hereford Base 3",
+	"House -1": "House -1",
+	"House 0": "House 0",
+	"House 1": "House 1",
+	"House 2": "House 2",
+	"Kanal 0": "Kanal 0",
+	"Kanal 1": "Kanal 1",
+	"Kanal 2": "Kanal 2",
+	"Kanal 3": "Kanal 3",
+	"Oregon -1": "Oregon -1",
+	"Oregon 0": "Oregon 0",
+	"Oregon 1": "Oregon 1",
+	"Oregon 2": "Oregon 2",
+	"Presidential Plane -1": "Presidential Plane -1",
+	"Presidential Plane 0": "Presidential Plane 0",
+	"Presidential Plane 1": "Presidential Plane 1",
+	"Presidential Plane 2": "Presidential Plane 2",
+	"Favella 0": "Favella 0",
+	"Favella 1": "Favella 1",
+	"Favella 2": "Favella 2",
+	"Favella 3": "Favella 3",
+	"Yacht -1": "Yacht -1",
+	"Yacht 0": "Yacht 0",
+	"Yacht 1": "Yacht 1",
+	"Yacht 2": "Yacht 2",
+	"Yacht 3": "Yacht 3",
+	"Skyscraper 0": "Skyscraper 0",
+	"Skyscraper 1": "Skyscraper 1",
+	"Skyscraper 2": "Skyscraper 2",
+	"Skyscraper 3": "Skyscraper 3",
+	"Attack Icon options": "Attack Icon options",
+	"Thermite": "Thermite",
+	"Ash": "Ash",
+	"Sledge": "Sledge",
+	"Thatcher": "Thatcher",
+	"Montagne": "Montagne",
+	"Twitch": "Twitch",
+	"Blitz": "Blitz",
+	"IQ": "IQ",
+	"Fuze": "Fuze",
+	"Glaz": "Glaz",
+	"Recruitk": "Recruitk",
+	"Buck": "Buck",
+	"Blackbeard": "Blackbeard",
+	"Capitão": "Capitão",
+	"Hibana": "Hibana",
+	"Smoke Grenade": "Smoke Grenade",
+	"Stun Grenade": "Stun Grenade",
+	"Breach Charge": "Breach Charge",
+	"Frag Grenade": "Frag Grenade",
+	"Rappel Device": "Rappel Device",
+	"Drone": "Drone",
+	"Camera": "Camera",
+	"Emp Grenade": "Emp Grenade",
+	"Flip Sight": "Flip Sight",
+	"Breaching Round": "Breaching Round",
+	"Extendable Shield": "Extendable Shield",
+	"Exothermic Charge": "Exothermic Charge",
+	"Breaching Hammer": "Breaching Hammer",
+	"Electronics Detector": "Electronics Detector",
+	"Cluster Charge": "Cluster Charge",
+	"Objective": "Objective",
+	"Defence Icon options": "Defence Icon options",
+	"Castle": "Castle",
+	"Pulse": "Pulse",
+	"Mute": "Mute",
+	"Smoke": "Smoke",
+	"Doc": "Doc",
+	"Rook": "Rook",
+	"Jäger": "Jäger",
+	"Bandit": "Bandit",
+	"Tachanka": "Tachanka",
+	"Kapkan": "Kapkan",
+	"Frost": "Frost",
+	"Valkyrie": "Valkyrie",
+	"Caveira": "Caveira",
+	"Echo": "Echo",
+	"Reinforcement": "Reinforcement",
+	"Barricade": "Barricade",
+	"Nitro Cell": "Nitro Cell",
+	"Deployable Shield": "Deployable Shield",
+	"Barbed Wire": "Barbed Wire",
+	"Remote Gas Grenade": "Remote Gas Grenade",
+	"Signal Disruptor": "Signal Disruptor",
+	"Armor Panel": "Armor Panel",
+	"Active Defense": "Active Defense",
+	"Shock Wire": "Shock Wire",
+	"Mounted LMG": "Mounted LMG",
+	"Cardiac Sensor": "Cardiac Sensor",
+	"Armor Pack": "Armor Pack",
+	"Entry Denial Device": "Entry Denial Device",
+	"Stim Pistol": "Stim Pistol",
+	"Disable dragging": "Disable dragging",
+	"Enable dragging": "Enable dragging",
+	"Recruit": "Recruit",
+	"Player stats": "Player stats",
+	"Total": "Total",
+	"Recent": "Recent",
+	"Last ~100 battles": "Last ~100 battles",
+	"Last ~1,000 battles": "Last ~1,000 battles",
+	"Last ~5,000 battles": "Last ~5,000 battles",
+	"Winrate": "Winrate",
+	"WN8": "WN8",
+	"WN9": "WN9",
+	"Damage": "Damage",
+	"Kills": "Kills",
+	"Survived": "Survived",
+	"K/D": "K/D",
+	"Defence points": "Defence points",
+	"Capture points": "Capture points",
+	"XP": "XP",
+	"Tier": "Tier",
+	"Nation": "Nation",
+	"Win rate": "Win rate",
+	"wn8": "wn8",
+	"wn9": "wn9",
+	"Resets every 24h": "Resets every 24h",
+	"No results found": "No results found",
+	"This user has not played any battles": "This user has not played any battles",
+	"Did you mean:": "Did you mean:"
 }
